fix the jumping width

--- a/packages/canvas-panel-full-page-plugin/src/components/MobileAnnotationView/MobileAnnotationView.scss
+++ b/packages/canvas-panel-full-page-plugin/src/components/MobileAnnotationView/MobileAnnotationView.scss
@@ -75,7 +75,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
   }
 
   &__void {
